fix: Dark mode text link

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,8 +7,9 @@ h2 {
 }
 
 .prose a {
-  color: rgb(55, 65, 81);
+  --tw-prose-links: var(--tw-text-opacity);
   text-decoration: none;
+  font-weight: normal;
 }
 
 h2 a:hover, .prose a:hover {
